force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/ysign__Yousign_Object_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Yousign Object Settings</label>
    <pluralLabel>Yousign Objects Settings</pluralLabel>
</CustomObject>