force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Autoselect_contact__c.field-meta.xml
<CustomField>
    <fullName>ysign__Autoselect_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoselect related contact</label>
    <type>Checkbox</type>
</CustomField>