force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Close_popup_on_result__c.field-meta.xml
<CustomField>
    <fullName>ysign__Close_popup_on_result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close popup on result</label>
    <type>Checkbox</type>
</CustomField>