force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Close_popup_on_submit__c.field-meta.xml
<CustomField>
    <fullName>ysign__Close_popup_on_submit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Close popup on Submit</label>
    <type>Checkbox</type>
</CustomField>