force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>ysign__Contact_Field__c</fullName>
    <inlineHelpText>Be careful, if your object is Opportunity, you can&apos;t select the &quot;Contact ID&quot; field because access to this special field is restricted as it refers to Primary OpportunityContactRole. If you do, the metadata record will be hidden from results.</inlineHelpText>
    <label>Contact Field</label>
    <metadataRelationshipControllingField>ysign__Yousign_Object_Settings__mdt.ysign__Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Yousign_Objects_Settings</relationshipLabel>
    <relationshipName>Yousign_Objects_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>