force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Disable_file_selection__c.field-meta.xml
<CustomField>
    <fullName>ysign__Disable_file_selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable file selection</label>
    <type>Checkbox</type>
</CustomField>