force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Draft_by_default__c.field-meta.xml
<CustomField>
    <fullName>ysign__Draft_by_default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft by default</label>
    <type>Checkbox</type>
</CustomField>