force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Has_files_rules__c.field-meta.xml
<CustomField>
    <fullName>ysign__Has_files_rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has files rules</label>
    <type>Checkbox</type>
</CustomField>