force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Min_required_files__c.field-meta.xml
<CustomField>
    <fullName>ysign__Min_required_files__c</fullName>
    <label>Min required files</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>