force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Object__c.field-meta.xml
<CustomField>
    <fullName>ysign__Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Yousign_Objects_Settings</relationshipLabel>
    <relationshipName>Yousign_Objects_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>