force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Select_all_files__c.field-meta.xml
<CustomField>
    <fullName>ysign__Select_all_files__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Select all files by default</label>
    <type>Checkbox</type>
</CustomField>