force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/fields/ysign__Use_Yousign_Integration__c.field-meta.xml
<CustomField>
    <fullName>ysign__Use_Yousign_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Won&apos;t close the popup after submit and start step 2 with integretad yousign iframe.</description>
    <label>Use Yousign Integration</label>
    <type>Checkbox</type>
</CustomField>