force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/validationRules/ysign__VR01_FIleRuleEnabledWithoutMinFiles.validationRule-meta.xml
<ValidationRule>
    <fullName>ysign__VR01_FIleRuleEnabledWithoutMinFiles</fullName>
    <active>true</active>
    <errorConditionFormula>ysign__Has_files_rules__c &amp;&amp; 
	(
					ISBLANK( ysign__Min_required_files__c ) ||
					ysign__Min_required_files__c &lt;= 0
	)</errorConditionFormula>
    <errorDisplayField>ysign__Min_required_files__c</errorDisplayField>
    <errorMessage>Files rules are enabled but there are no value set for min required files field.</errorMessage>
</ValidationRule>