force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/validationRules/ysign__VR02_AutoselectContactWithoutContact.validationRule-meta.xml
<ValidationRule>
    <fullName>ysign__VR02_AutoselectContactWithoutContact</fullName>
    <active>true</active>
    <errorConditionFormula>ysign__Autoselect_contact__c  &amp;&amp; 
ISBLANK( ysign__Contact_Field__c ) &amp;&amp;
ysign__Object__r.QualifiedApiName != &apos;Opportunity&apos;</errorConditionFormula>
    <errorDisplayField>ysign__Contact_Field__c</errorDisplayField>
    <errorMessage>Autoselect related contact is checked but no Contact field has been selected</errorMessage>
</ValidationRule>