force-app/main/default/objects/ysign__Yousign_Object_Settings__mdt/validationRules/ysign__VR04_CannotClosePopupIfYsignIntegration.validationRule-meta.xml
<ValidationRule>
    <fullName>ysign__VR04_CannotClosePopupIfYsignIntegration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ysign__Use_Yousign_Integration__c,
    OR (ysign__Close_popup_on_submit__c,
        ysign__Close_popup_on_result__c
    )
)</errorConditionFormula>
    <errorMessage>You cannot close the popup automatically when Use yousign integration is checked.</errorMessage>
</ValidationRule>